bekuber-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bekuber-deployment
  labels:
    app: bekuber
spec:
  selector:
    matchLabels:
      app: bekuber
  template:
    metadata:
      labels:
        app: bekuber
    spec:
      containers:
      - name: bekuber
        image: lapisan/bekuber:1.0
        ports:
        - containerPort: 5001
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 512Mi
