fekuber-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fekuber-service
spec:
  selector:
    app: fekuber
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
